# linenoise

./: CMakeLists.txt  README.md
include/: linenoise.h
src/: ConvertUTF.cpp  ConvertUTF.h  linenoise.cpp  wcwidth.cpp
test/: CMakeLists.txt  example.c
